# kaggle.rental.product.recommendation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dvc.yaml  gru4rec-catboost-hybrid-recommender-system.ipynb  inference.py  main.py  params.yaml  pyproject.toml  train.py
.dvc/: config
artifacts/: config.json  coocc.pkl  global_top.json  metadata.json  model.pt  old_to_new.pkl  order_cooccur.pkl  p2p.pkl  p2p_totals.pkl  pid2idx.pkl  pid_to_pop.pkl  product_first_seen.pkl  product_last_seen.pkl  product_recency.pkl  search_index.pkl  trigrams_dict.pkl
artifacts/final/: config.json
context/: commits.md
data/: metrika_hits_test.parquet  metrika_visits_test.parquet  new_site_orders.parquet  old_site_new_site_products.parquet  old_site_orders.parquet  old_site_products.parquet  products_all.parquet
migrations/: env.py
migrations/versions/: a8e538275d7f_create_inference_tables.py
model/: model.pt
output/: predictions.csv  submission.csv
scripts/: load_users_to_rds.py  upload_artifacts.py
server/: __init__.py  app.py  artifact_loader.py  database.py  models.py  predictor.py  schemas.py
test/: test_rds_predictions.py  test_user_context.py
training/: config.py  model.py  package_artifacts.py  prepare_behavioral_signals.py  prepare_discovery.py  prepare_gru_data.py  prepare_products.py  prepare_sessions.py  train_gru.py  utils.py
