[project]
name = "kaggle-rental-product-recommendation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "boto3>=1.42.0",
    "dvc>=3.67.1",
    "dvc-s3>=3.3.0",
    "fastapi>=0.137.0",
    "fastparquet>=2026.5.0",
    "greenlet>=3.5.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.50",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.49.0",
]
